--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div id="head">
         <div class="container">
             <nav>
-                <img src="images/logo.jpg" alt="logo">
+                <img src="images/logo.webp" alt="logo">
                 <ul>
                     <li><a href="#" class="active">Home</a></li>
                     <li><a href="#">About</a></li>
@@ -40,7 +40,7 @@
 
                 </div>
                 <div class="homeimg">
-                    <img src="images/1711862876742.jpg" alt="">
+                    <img src="images/1711862876742.webp" alt="">
                 </div>
 
             </div>
