--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
                 </div>
                 <div class="homeimg">
-                    <img src="images/1711862876742.webp" alt="">
+                    <img src="images/home-img.webp" alt="">
                 </div>
 
             </div>
