--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                     <li><a href="#" class="active">Home</a></li>
                     <li><a href="#">About</a></li>
                     <li> <a href="#">Portfolio</a></li>
-                    <li> <a href="#">Education</a></li>
+                    <li> <a href="#">Projects</a></li>
                     <li><a href="#">Contact</a></li>
                 </ul>
             </nav>
@@ -33,7 +33,7 @@
                         enthusiast with a passion for creating innovative <br>
                         and user-friendly digital experiences.</p>
                     <div class="icon">
-                        <a href="#" class="ic"><i class='bx bxl-linkedin-square'></i></a>
+                
                         <a href="#" class="res">Resume</a>
                     </div>
 
@@ -42,11 +42,33 @@
                 <div class="homeimg">
                     <img src="images/home-img.webp" alt="">
                 </div>
+            </div>
+        </div>
+    </div>
+    <div id="about">
+        <div class="sec2">
+            <div class="row">
+            <div class="col1">
+             <img src="images/img.jpg" alt="me">
+            </div>
+            <div class="col2">
+                <h1 class="heading">About <span>Me</span>
+                     </h1>
+                <br><hr class="line"><br>
+                <p>Hi, I'm Krati, a Learner & student at ITM university,Gwalior. I'm excited to share my portfolio with you, showcasing my academic and professional journey.</p>
+                <h5 >Academic Background</h5>
+                <p> 
+                    Degree and Major: I'm currently pursuing a Bachelor's degree in Computer Applications  at ITM University,Gwalior
+                    and my current GPA is 8.38.</p>
+                    <h5 >Skills and Interests</h5>
+                    
+                    </p>
+                    <p>In my free time, I enjoy exploring new programming languages, participating in coding challenges, and staying up-to-date with the latest industry trends. I'm also an avid learner, always seeking to expand my skill set and stay ahead of the curve.
+                        As I approach graduation, I'm eager to leverage my skills and experience to make a meaningful impact in the tech industry. I'm excited to connect with professionals, learn from their experiences, and contribute to the growth of the field.</p>
 
             </div>
-
         </div>
-
+        </div>
     </div>
 
 </body>
