--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <div class="sec2">
             <div class="row">
             <div class="col1">
-             <img src="images/img.jpg" alt="me">
+             <img src="images/img.webp" alt="me">
             </div>
             <div class="col2">
                 <h1 class="heading">About <span>Me</span>
