--- a/index.html
+++ b/index.html
@@ -111,13 +111,24 @@
         <div class="sec4">
             <div class="vert">
                 <div class="left">
-                    <h1 class="sub">Contact me</h1>
-                    <p>Krati.tangar@gmail.com</p>
-                    <div class="icons"></div>
-                    
+                    <h1 class="sub"><span><i class='bx bxs-phone-call' ></span></i>Contact Me</h1>
+                    <p><span><i class='bx bx-mail-send'></i></span>Krati.tangar@gmail.com</p>
+                    <div class="icons">
+                    <a href="https://www.linkedin.com/in/krati-32a96a2b0/"><i class='bx bxl-linkedin-square'></i></a>
+                    <a href=""><i class='bx bxl-github'></i></a>
+                    <a href=""><i class='bx bxl-whatsapp'></i></a>
+                    <a href=""><i class='bx bxl-telegram'></i></a>
                 </div>
-                <div class="right"></div>
-
+                </div>
+                <div class="right">
+                    <form>
+                        <input type="text" name="Name" placeholder="Your Full Name">
+                        <input type="email" name="Email" placeholder="Your Email id">
+                        <input type="number" name="Phone number" placeholder="Your Contact number">
+                        <textarea  name="Message" rows="6" placeholder="Your message"></textarea>
+                        <button type="Submit">Submit</button>
+                    </form>
+                </div>
 
             </div>
         </div>
