--- a/index.html
+++ b/index.html
@@ -13,16 +13,17 @@
 
 <body>
     <!-- -----------------------home----------------------------- -->
+    <section>
     <div id="head">
         <div class="container">
             <nav>
                 <img src="images/logo.webp" alt="logo">
                 <ul>
-                    <li><a href="#" class="active">Home</a></li>
-                    <li><a href="#">About</a></li>
-                    <li> <a href="#">Skills</a></li>
-                    <li> <a href="#">Projects</a></li>
-                    <li><a href="#">Contact</a></li>
+                    <li><a href="#head" class="active">Home</a></li>
+                    <li><a href="#about">About</a></li>
+                    <li> <a href="#skills">Skills</a></li>
+                    <li> <a href="#project">Portfolio</a></li>
+                    <li><a href="#contact">Contact</a></li>
                 </ul>
             </nav>
             <div class="home">
@@ -35,7 +36,7 @@
                         and user-friendly digital experiences.</p>
                     <div class="icon">
                 
-                        <a href="#" class="res">Resume</a>
+                              Portfolio
                     </div>
 
 
@@ -46,9 +47,10 @@
             </div>
         </div>
      </div>
+    </section>
 
     <!-- -----------------------------about-----------------------------  -->
-
+ <section>
     <div id="about">
         <div class="sec2">
             <div class="row">
@@ -73,10 +75,11 @@
         </div>
         </div>
     </div>
+</section>
 
 <!-- -------------------------------------------skills------------------------------------------- -->
-
-    <div class="skills">
+<section>
+    <div id="skills">
         <div class="sec3">
             <h1 class="title"><span>My </span>Skills</h1>
             <div class="sklist">
@@ -105,9 +108,29 @@
 
         </div>
     </div>
+</section>
+    <!-- ----------------------------------------------project-------------------------------------- -->
+    <section>
+    <div id="project">
+        <div class="sec5">
+            <h1 class="prj"><span>My</span> Projects</h1>
+            <div class="prjlist">
+                <div>
+                    <h3>Landing Pages</h3>
+                    <p></p>
+                </div>
+                <div>
+                    <h3>Calculator</h3>
+                    <p></p>
+                </div>
+
+            </div>
+        </div>
+    </div>
+</section>
     <!-- ---------------------------------------contact---------------------------------------- -->
 
-    <div class="contact">
+    <div id="contact">
         <div class="sec4">
             <div class="vert">
                 <div class="left">
@@ -115,24 +138,49 @@
                     <p><span><i class='bx bx-mail-send'></i></span>Krati.tangar@gmail.com</p>
                     <div class="icons">
                     <a href="https://www.linkedin.com/in/krati-32a96a2b0/"><i class='bx bxl-linkedin-square'></i></a>
-                    <a href=""><i class='bx bxl-github'></i></a>
-                    <a href=""><i class='bx bxl-whatsapp'></i></a>
-                    <a href=""><i class='bx bxl-telegram'></i></a>
+                    <a href="https://github.com/Krati-08"><i class='bx bxl-github'></i></a>
+                    <a href=" https://wa.me/919045401891"><i class='bx bxl-whatsapp'></i></a>
+                    <a href="https://web.telegram.org/k/"><i class='bx bxl-telegram'></i></a>
                 </div>
+                <a href="images/resume.pdf" download class="icon btn2">Download Resume</a>
                 </div>
                 <div class="right">
-                    <form>
-                        <input type="text" name="Name" placeholder="Your Full Name">
-                        <input type="email" name="Email" placeholder="Your Email id">
-                        <input type="number" name="Phone number" placeholder="Your Contact number">
+                    <form name="submit-to-google-sheet">
+                        <input type="text" name="Name" placeholder="Your Full Name" required>
+                        <input type="email" name="Email" placeholder="Your Email id" required>
+                       
                         <textarea  name="Message" rows="6" placeholder="Your message"></textarea>
-                        <button type="Submit">Submit</button>
+                        <button type="Submit" class="icon btn3">Submit</button>
                     </form>
+                    <span id="msg"></span>
                 </div>
 
             </div>
         </div>
     </div>
+    <!-- ----------------------------------------footer----------------------------------------- -->
+<footer>
+    <div class="copyright">
+        <p>Copyright © Krati's <i class='bx bxs-donate-heart'></i> Creative Corner</p>
+    </div>
+</footer> 
+<script>
+    const scriptURL = 'https://script.google.com/macros/s/AKfycbwnj_riuW4EDdapEeHAYG9KW7N57obuaVhEXhtknEhL6-pUZvs94N5n_AmGGRg9yfeI8g/exec'
+    const form = document.forms['submit-to-google-sheet']
+    const msg = document.getElementById("msg")
+    form.addEventListener('submit', e => {
+      e.preventDefault()
+      fetch(scriptURL, { method: 'POST', body: new FormData(form)})
+        .then(response => {
+            msg.innerHTML = "Message sent successfully"
+            setTimeout(function(){
+                msg.innerHTML=""
+            },3000)
+            form.reset()
+        })
+        .catch(error => console.error('Error!', error.message))
+    })
+  </script>   
 </body>
 
 </html>
