--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
     <!-- ----------------------------------------footer----------------------------------------- -->
 <footer>
     <div class="copyright">
-        <p>Copyright © Krati's <i class='bx bxs-donate-heart'></i> Creative Corner</p>
+        <p>Copyright © Krati's <i class='bx bxs-donate-heart'></i> Creative Corner||2024</p>
     </div>
 </footer> 
 <script>
