--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
     </div>
 </section>
     <!-- ----------------------------------------------project-------------------------------------- -->
-    <section>
+    <!-- <section>
     <div id="project">
         <div class="sec5">
             <h1 class="prj"><span>My</span> Projects</h1>
@@ -125,7 +125,7 @@
             </div>
         </div>
     </div>
-</section>
+</section> -->
     <!-- ---------------------------------------contact---------------------------------------- -->
 
     <div id="contact">
@@ -140,7 +140,7 @@
                     <a href=" https://wa.me/919045401891"><i class='bx bxl-whatsapp'></i></a>
                     <a href="https://web.telegram.org/k/"><i class='bx bxl-telegram'></i></a>
                 </div>
-                <a href="images/resume.pdf" download class="icon btn2">Download Resume</a>
+                <a href="images/resume.pdf" download class="icon btn2">RESUME</a>
                 </div>
                 <div class="right">
                     <form name="submit-to-google-sheet">
