--- a/index.html
+++ b/index.html
@@ -108,24 +108,28 @@
     </div>
 </section>
     <!-- ----------------------------------------------project-------------------------------------- -->
-    <!-- <section>
+    <section>
     <div id="project">
         <div class="sec5">
             <h1 class="prj"><span>My</span> Projects</h1>
             <div class="prjlist">
-                <div>
+                <div class="netf">
                     <h3>Landing Pages</h3>
-                    <p></p>
+                    <p>Netflix website clone</p>
+                    <a href=""><img src="images/netflixclone.png" alt=""></a>
+                    
                 </div>
-                <div>
+                <div class="netf">
                     <h3>Calculator</h3>
-                    <p></p>
+                    <p>A Basic Calculator</p>
+                    <a href=""><img src="images/calculator.png" alt=""></a>
+                    
                 </div>
 
             </div>
         </div>
     </div>
-</section> -->
+</section>
     <!-- ---------------------------------------contact---------------------------------------- -->
 
     <div id="contact">
