--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
             <h1 class="prj"><span>My</span> Projects</h1>
             <div class="prjlist">
                 <div class="netf">
-                    <h3>Landing Pages</h3>
+                    <h3>Landing Page</h3>
                     <p>Netflix website clone</p>
                     <a href=""><img src="images/netflixclone.png" alt=""></a>
                     
