--- a/index.html
+++ b/index.html
@@ -117,13 +117,13 @@
                 <div class="netf">
                     <h3>Landing Page</h3>
                     <p>Netflix website clone</p>
-                    <a href=""><img src="images/netflixclone.png" alt=""></a>
+                    <a href="#"><img src="images/netflixclone.png" alt=""></a>
                     
                 </div>
                 <div class="netf">
                     <h3>Calculator</h3>
                     <p>A Basic Calculator</p>
-                    <a href=""><img src="images/calculator.png" alt=""></a>
+                    <a href="#"><img src="images/calculator.png" alt=""></a>
                     
                 </div>
 
