--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
                     <a href=" https://wa.me/919045401891"><i class='bx bxl-whatsapp'></i></a>
                     <a href="https://web.telegram.org/k/"><i class='bx bxl-telegram'></i></a>
                 </div>
-                <a href="images/resume.pdf" download class="icon btn2">RESUME</a>
+                <a href="#" download class="icon btn2">RESUME</a>
                 </div>
                 <div class="right">
                     <form name="submit-to-google-sheet">
